--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-connect": "^4.0.0",
     "gulp-htmlincluder": "^0.1.0",
     "gulp-less": "^3.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.2.2",
     "gulp.spritesmith": "^6.2.1"
   }
